--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -8,25 +9,52 @@
 
   <title>Frontend Mentor | Article preview component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 </head>
+
 <body>
 
-  Shift the overall look and feel by adding these wonderful
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps
-  it felt slightly bare and uninviting. I’ve got some simple tips
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
+  <div class="container">
+    <div class="imgLeft">
+      <img src="images/drawers.jpg" alt="Imagen de living">
+    </div>
+    <div class="textRight">
+      <div class="contentRight">
+        <h1> Shift the overall look and feel by adding these wonderful
+          touches to furniture in your home</h1>
+        <p> Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I’ve got some simple tips
+          to help you make any room feel complete.</p>
+        <div class="contact">
+          <img class="avatar" src="images/avatar-michelle.jpg" alt="facePicture">
+          <div class="contactName">
+            <h2>Michelle Appleton</h2>
+            <p>28 Jun 2020</p>
+          </div>
+          <div class="share shareImage">
+          </div>
+          <div class="sharePop elmntHidden">
+            <p class="fab">SHARE</p>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://ar.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></i></a>
+            <div class="shareHidden">
+            </div>
+          </div>
+          <div class="arrow elmntHidden">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Gusjafo" target="_blank">Gusjafo</a>.
   </div>
+  <script src="index.js" charset="utf-8"></script>
 </body>
+
 </html>
